Did high quality structure of cresla at 40/60