@@ -1,5 +1,6 @@
 package cresla.entities.containers;
 
+import cresla.annotations.ItemCollection;
 import cresla.interfaces.AbsorbingModule;
 import cresla.interfaces.Container;
 import cresla.interfaces.EnergyModule;
@@ -10,19 +11,20 @@ import java.util.*;
 public class ModuleContainer implements Container {
 
     private int moduleCapacity;
-    private LinkedList<Module> modulesByInput;
+    @ItemCollection
+    private List<Module> modulesByInput;
     private Map<Integer, EnergyModule> energyModules;
     private Map<Integer, AbsorbingModule> absorbingModules;
 
     public ModuleContainer(int moduleCapacity) {
         this.moduleCapacity = moduleCapacity;
-        this.modulesByInput = new LinkedList<>();
+        this.modulesByInput = new ArrayList<>();
         this.energyModules = new LinkedHashMap<Integer, EnergyModule>();
         this.absorbingModules = new LinkedHashMap<Integer, AbsorbingModule>();
     }
 
-    public void addEnergyModule(EnergyModule energyModule) {
-        if (energyModule != null) {
+    public void addEnergyModule(EnergyModule energyModule) throws IllegalArgumentException {
+        if (energyModule == null) {
             throw new IllegalArgumentException();
         }
 
@@ -31,11 +33,11 @@ public class ModuleContainer implements Container {
         }
 
         this.energyModules.put(energyModule.getId(), energyModule);
-        this.modulesByInput.addLast(energyModule);
+        this.modulesByInput.add(energyModule);
     }
 
-    public void addAbsorbingModule(AbsorbingModule absorbingModule) {
-        if (absorbingModule != null) {
+    public void addAbsorbingModule(AbsorbingModule absorbingModule) throws IllegalArgumentException {
+        if (absorbingModule == null) {
             throw new IllegalArgumentException();
         }
 
@@ -44,7 +46,7 @@ public class ModuleContainer implements Container {
         }
 
         this.absorbingModules.put(absorbingModule.getId(), absorbingModule);
-        this.modulesByInput.addLast(absorbingModule);
+        this.modulesByInput.add(absorbingModule);
     }
 
     @Override
@@ -62,7 +64,7 @@ public class ModuleContainer implements Container {
     }
 
     private void removeOldestModule() {
-        int removeId = this.modulesByInput.removeFirst().getId();
+        int removeId = this.modulesByInput.remove(0).getId();
 
         if(!this.energyModules.containsKey(removeId)) {
             this.energyModules.remove(removeId);
